<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">Hangman</string>  
    <string name="startgame">New game</string>
    <string name="showrules">Show rules</string>
    <string name="exitgame">Quit</string>
    <string name="rules_title">Rules</string>
    <string name="rules">"The game is about finding the right word. The only information you get is how many letters the word is made up of, and you have to guess letters of which the word consist. \n\nEvery time you guess right, the letter appears in the series of letters. \n\nIf you guess the wrong letter, a new line gets drawn on what in the end turns in to a man hanging from a gallow. When the man is fully drawn, the game is over."</string>
    <string name="pic_description">Hangmanfigure</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_won">"Games won: "</string>
    <string name="statistics_lost">"Games lost: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_won">Congratulation! You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="dialog_play_more">Do you want to play more?</string>
    <string name="correct_word">"Correct word: "</string>
    <string name="reset">Reset</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="ae">Æ</string>
    <string name="oe">Ø</string>
    <string name="aa">Å</string>
</resources>
