<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/black">
    
    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@color/white"
        android:padding="7dp" >

        <RelativeLayout
            android:layout_width="395dp"
            android:layout_height="195dp"
            android:background="@color/green"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            
            <ImageView
                android:id="@+id/pic_hangmandraw"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:contentDescription="@string/pic_description"
    			android:src="@drawable/hangmanpic_0"/>
            
            <TextView 
                android:id="@+id/tv_wrongletter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </FrameLayout>
    
    <TextView
        android:id="@+id/tv_gameword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white" 
        android:textSize="20sp"
        android:gravity="center"/>
    
    <RelativeLayout 
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <Button
        android:id="@+id/btn_a"
        android:text="@string/a"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_b"
        android:text="@string/b"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_a" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_c"
        android:text="@string/c"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_b"
        android:onClick="pickedALetterClick" />
    
    <Button
        android:id="@+id/btn_d"
        android:text="@string/d"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_c" 
        android:onClick="pickedALetterClick"/>
        
    <Button
        android:id="@+id/btn_e"
        android:text="@string/e"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_d" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_f"
        android:text="@string/f"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_e" 
        android:onClick="pickedALetterClick"/>
        
    <Button
        android:id="@+id/btn_g"
        android:text="@string/g"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_f" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_h"
        android:text="@string/h"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_g" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_i"
        android:text="@string/i"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_a" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_j"
        android:text="@string/j"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_i"
        android:layout_below="@id/btn_b"
        android:onClick="pickedALetterClick" />
    
    <Button
        android:id="@+id/btn_k"
        android:text="@string/k"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_j"
        android:layout_below="@id/btn_c" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_l"
        android:text="@string/l"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_k"
        android:layout_below="@id/btn_d" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_m"
        android:text="@string/m"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_l"
        android:layout_below="@id/btn_e" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_n"
        android:text="@string/n"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_m"
        android:layout_below="@id/btn_f" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_o"
        android:text="@string/o"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_n"
        android:layout_below="@id/btn_g" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_p"
        android:text="@string/p"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_o"
        android:layout_below="@id/btn_h" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_q"
        android:text="@string/q"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_i" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_r"
        android:text="@string/r"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_q"
        android:layout_below="@id/btn_j" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_s"
        android:text="@string/s"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_r"
        android:layout_below="@id/btn_k" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_t"
        android:text="@string/t"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_s"
        android:layout_below="@id/btn_l"
        android:onClick="pickedALetterClick" />
    
    <Button
        android:id="@+id/btn_u"
        android:text="@string/u"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_t"
        android:layout_below="@id/btn_m"
        android:onClick="pickedALetterClick" />
    
    <Button
        android:id="@+id/btn_v"
        android:text="@string/v"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_u"
        android:layout_below="@id/btn_n"
        android:onClick="pickedALetterClick" />
    
    <Button
        android:id="@+id/btn_w"
        android:text="@string/w"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_v"
        android:layout_below="@id/btn_o" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_x"
        android:text="@string/x"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_w"
        android:layout_below="@id/btn_p" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_y"
        android:text="@string/y"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_q" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_z"
        android:text="@string/z"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_y"
        android:layout_below="@id/btn_r" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_ae"
        android:text="@string/ae"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_z"
        android:layout_below="@id/btn_s" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_oe"
        android:text="@string/oe"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_ae"
        android:layout_below="@id/btn_t" 
        android:onClick="pickedALetterClick"/>
    
    <Button
        android:id="@+id/btn_aa"
        android:text="@string/aa"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_oe"
        android:layout_below="@id/btn_u" 
        android:onClick="pickedALetterClick"/>
    </RelativeLayout>    
</LinearLayout>